--- a/bmi_cal.ipynb
+++ b/bmi_cal.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -39,7 +39,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Your BMI : 28.346268394151256\nPre-Obesity\n"
+      "Your BMI is : 26.37755102040817\nPre-Obesity\n"
      ]
     }
    ],
@@ -55,17 +55,17 @@
     "        break\n",
     "    meter = height/100\n",
     "    bmi = weight / (meter * meter)\n",
-    "    print(\"Your BMI :\", bmi)\n",
+    "    print(\"Your BMI is :\", bmi)\n",
     "    if (bmi>0):\n",
-    "        if (bmi < 18.5):\n",
+    "        if(bmi < 18.5):\n",
     "            print(\"Underweight\")\n",
-    "        elif (bmi >= 18.5 and bmi <= 24.9 ):\n",
+    "        elif(bmi >= 18.5 and bmi < 25.0 ):\n",
     "            print(\"Normal Weight\")\n",
-    "        elif (bmi >= 25.0 and bmi <=29.9):\n",
+    "        elif(bmi >= 25.0 and bmi < 30.0):\n",
     "            print(\"Pre-Obesity\")\n",
-    "        elif (bmi >= 30.0 and bmi <= 34.9):\n",
+    "        elif(bmi >= 30.0 and bmi < 35.0):\n",
     "            print(\"Obesity Class I\")\n",
-    "        elif (bmi >= 35.0 and bmi <= 39.9):\n",
+    "        elif(bmi >= 35.0 and bmi < 40.0):\n",
     "            print(\"Obesity Class II\")\n",
     "        else:\n",
     "            print(\"Obesity Class III\")\n",
